Moved project to javacord and fixed many visual bugs.