@@ -1,18 +1,27 @@
-package me.ryzeon.transcripts;
+package me.taubsie.transcripts;
 
-import lombok.var;
-import net.dv8tion.jda.api.entities.*;
+import lombok.Getter;
+import org.javacord.api.entity.Attachment;
+import org.javacord.api.entity.DiscordEntity;
+import org.javacord.api.entity.Icon;
+import org.javacord.api.entity.channel.ServerTextChannel;
+import org.javacord.api.entity.message.Message;
+import org.javacord.api.entity.message.MessageAuthor;
+import org.javacord.api.entity.message.embed.Embed;
+import org.javacord.api.entity.message.embed.EmbedField;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
+import org.jsoup.nodes.Node;
 
 import java.awt.*;
-import java.io.*;
-import java.net.URL;;
+import java.io.IOException;
+import java.io.InputStream;
+import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
-import java.util.*;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.*;
+import java.util.stream.Stream;
 
 /**
  * Created by Ryzeon
@@ -22,52 +31,38 @@ import java.util.stream.Collectors;
  * Github: github.ryzeon.me
  */
 public class DiscordHtmlTranscripts {
-
-    private final List<String>
-            imageFormats = Arrays.asList("png", "jpg", "jpeg", "gif"),
-            videoFormats = Arrays.asList("mp4", "webm", "mkv", "avi", "mov", "flv", "wmv", "mpg", "mpeg"),
-            audioFormats = Arrays.asList("mp3", "wav", "ogg", "flac");
-
-
+    @Getter
     private static final DiscordHtmlTranscripts instance = new DiscordHtmlTranscripts();
+    private final List<String> videoFormats = Arrays.asList("mp4", "webm", "mkv", "avi", "mov", "flv", "wmv", "mpg",
+            "mpeg");
+    private final List<String> audioFormats = Arrays.asList("mp3", "wav", "ogg", "flac");
 
-    public static DiscordHtmlTranscripts getInstance() {
-        return instance;
+    public String createTranscript(ServerTextChannel channel) throws IOException {
+        return generateFromMessages(channel, channel.getMessagesAsStream());
     }
 
-    public void createTranscript(TextChannel channel) throws IOException {
-        createTranscript(channel, null);
-    }
+    public String generateFromMessages(ServerTextChannel channel, Stream<Message> messages) throws IOException {
+        InputStream htmlTemplate = getClass().getClassLoader().getResourceAsStream("template.html");
 
-    public void createTranscript(TextChannel channel, String fileName) throws IOException {
-        channel.sendFile(generateFromMessages(channel.getIterableHistory().stream().collect(Collectors.toList())), fileName != null ? fileName : "transcript.html").queue();
-    }
-
-    public InputStream generateFromMessages(Collection<Message> messages) throws IOException {
-        File htmlTemplate = findFile("template.html");
-        if (messages.isEmpty()) {
-            throw new IllegalArgumentException("No messages to generate a transcript from");
-        }
-        TextChannel channel = messages.iterator().next().getTextChannel();
-        Document document = Jsoup.parse(htmlTemplate, "UTF-8");
+        Document document = Jsoup.parse(htmlTemplate, "UTF-8", "");
         document.outputSettings().indentAmount(0).prettyPrint(true);
-        document.getElementsByClass("preamble__guild-icon")
-                .first().attr("src", channel.getGuild().getIconUrl()); // set guild icon
+        document.getElementsByClass("preamble__guild-icon").first()
+                .attr("src", String.valueOf(channel.getServer().getIcon().map(Icon::getUrl).orElse(null)));
 
         document.getElementById("transcriptTitle").text(channel.getName()); // set title
-        document.getElementById("guildname").text(channel.getGuild().getName()); // set guild name
+        document.getElementById("guildname").text(channel.getServer().getName()); // set guild name
         document.getElementById("ticketname").text(channel.getName()); // set channel name
 
         Element chatLog = document.getElementById("chatlog"); // chat log
-        for (Message message : messages.stream()
-                .sorted(Comparator.comparing(ISnowflake::getTimeCreated))
-                .collect(Collectors.toList())) {
+
+
+        for(Message message : messages.sorted(Comparator.comparing(DiscordEntity::getCreationTimestamp)).toList()) {
             // create message group
             Element messageGroup = document.createElement("div");
             messageGroup.addClass("chatlog__message-group");
 
             // message reference
-            if (message.getReferencedMessage() != null) { // preguntar si es eso
+            if (message.getReferencedMessage().isPresent()) { // preguntar si es eso
                 // message.reference?.messageId
                 // create symbol
                 Element referenceSymbol = document.createElement("div");
@@ -77,26 +72,24 @@ public class DiscordHtmlTranscripts {
                 Element reference = document.createElement("div");
                 reference.addClass("chatlog__reference");
 
-                var referenceMessage = message.getReferencedMessage();
-                User author = referenceMessage.getAuthor();
-                Member member = channel.getGuild().getMember(author);
-                var color = Formatter.toHex(Objects.requireNonNull(member.getColor()));
+                var referenceMessage = message.getReferencedMessage().get();
+                MessageAuthor author = referenceMessage.getAuthor();
+                var color = Formatter.toHex(Objects.requireNonNull(author.getRoleColor().orElse(Color.WHITE)));
 
-                //        System.out.println("REFERENCE MSG " + referenceMessage.getContentDisplay());
                 reference.html("<img class=\"chatlog__reference-avatar\" src=\""
-                        + author.getAvatarUrl() + "\" alt=\"Avatar\" loading=\"lazy\">" +
+                        + author.getAvatar().getUrl() + "\" alt=\"Avatar\" loading=\"lazy\">" +
                         "<span class=\"chatlog__reference-name\" title=\"" + author.getName()
                         + "\" style=\"color: " + color + "\">" + author.getName() + "\"</span>" +
                         "<div class=\"chatlog__reference-content\">" +
                         " <span class=\"chatlog__reference-link\" onclick=\"scrollToMessage(event, '"
                         + referenceMessage.getId() + "')\">" +
                         "<em>" +
-                        referenceMessage.getContentDisplay() != null
-                        ? referenceMessage.getContentDisplay().length() > 42
-                        ? referenceMessage.getContentDisplay().substring(0, 42)
-                        + "..."
-                        : referenceMessage.getContentDisplay()
-                        : "Click to see attachment" +
+                        (!referenceMessage.getReadableContent().isBlank()
+                                ? referenceMessage.getReadableContent().length() > 42
+                                ? referenceMessage.getReadableContent().substring(0, 42)
+                                + "..."
+                                : referenceMessage.getReadableContent()
+                                : "Click to see attachment") +
                         "</em>" +
                         "</span>" +
                         "</div>");
@@ -112,7 +105,7 @@ public class DiscordHtmlTranscripts {
 
             Element authorAvatar = document.createElement("img");
             authorAvatar.addClass("chatlog__author-avatar");
-            authorAvatar.attr("src", author.getAvatarUrl());
+            authorAvatar.attr("src", String.valueOf(author.getAvatar().getUrl()));
             authorAvatar.attr("alt", "Avatar");
             authorAvatar.attr("loading", "lazy");
 
@@ -126,12 +119,12 @@ public class DiscordHtmlTranscripts {
             Element authorName = document.createElement("span");
             authorName.addClass("chatlog__author-name");
             // authorName.attr("title", author.getName()); // author.name
-            authorName.attr("title", author.getAsTag());
+            authorName.attr("title", author.getDisplayName());
             authorName.text(author.getName());
-            authorName.attr("data-user-id", author.getId());
+            authorName.attr("data-user-id", String.valueOf(author.getId()));
             content.appendChild(authorName);
 
-            if (author.isBot()) {
+            if (author.isBotUser()) {
                 Element botTag = document.createElement("span");
                 botTag.addClass("chatlog__bot-tag").text("BOT");
                 content.appendChild(botTag);
@@ -140,19 +133,22 @@ public class DiscordHtmlTranscripts {
             // timestamp
             Element timestamp = document.createElement("span");
             timestamp.addClass("chatlog__timestamp");
-            timestamp
-                    .text(message.getTimeCreated().format(DateTimeFormatter.ofPattern("HH:mm:ss")));
+
+            timestamp.text(DateTimeFormatter
+                    .ofPattern("HH:mm:ss")
+                    .withZone(ZoneId.systemDefault())
+                    .format(message.getCreationTimestamp()));
 
             content.appendChild(timestamp);
 
             Element messageContent = document.createElement("div");
             messageContent.addClass("chatlog__message");
-            messageContent.attr("data-message-id", message.getId());
+            messageContent.attr("data-message-id", String.valueOf(message.getId()));
             messageContent.attr("id", "message-" + message.getId());
             messageContent.attr("title", "Message sent: "
-                    + message.getTimeCreated().format(DateTimeFormatter.ofPattern("HH:mm:ss")));
+                    + DateTimeFormatter.ofPattern("HH:mm:ss").withZone(ZoneId.systemDefault()).format(message.getCreationTimestamp()));
 
-            if (message.getContentDisplay().length() > 0) {
+            if (!message.getReadableContent().isBlank()) {
                 Element messageContentContent = document.createElement("div");
                 messageContentContent.addClass("chatlog__content");
 
@@ -168,8 +164,9 @@ public class DiscordHtmlTranscripts {
 //                System.out.println(message.getContentDisplay().contains("\n"));
 //                System.out.println(message.getContentDisplay().contains("\r"));
 //                System.out.println(message.getContentDisplay().contains("\r\n"));
+                document.outputSettings().prettyPrint(false);
                 messageContentContentMarkdownSpan
-                        .html(Formatter.format(message.getContentDisplay()));
+                        .html(Formatter.format(message.getReadableContent()));
 
                 messageContentContentMarkdown.appendChild(messageContentContentMarkdownSpan);
                 messageContentContent.appendChild(messageContentContentMarkdown);
@@ -178,43 +175,44 @@ public class DiscordHtmlTranscripts {
 
             // messsage attachments
             if (!message.getAttachments().isEmpty()) {
-                for (Message.Attachment attach : message.getAttachments()) {
+                for(Attachment attachment : message.getAttachments()) {
                     Element attachmentsDiv = document.createElement("div");
                     attachmentsDiv.addClass("chatlog__attachment");
 
-                    var attachmentType = attach.getFileExtension();
-                    if (imageFormats.contains(attachmentType)) {
-                        //          System.out.println("UNGA IMAGEN WEBON XD");
+                    Optional<String> attachmentType = Optional.of(attachment.getFileName())
+                            .filter(s -> s.contains("."))
+                            .map(s -> s.substring(s.lastIndexOf(".") + 1));
+                    if (attachment.isImage()) {
                         Element attachmentLink = document.createElement("a");
 
                         Element attachmentImage = document.createElement("img");
                         attachmentImage.addClass("chatlog__attachment-media");
-                        attachmentImage.attr("src", attach.getUrl());
+                        attachmentImage.attr("src", String.valueOf(attachment.getUrl()));
                         attachmentImage.attr("alt", "Image attachment");
                         attachmentImage.attr("loading", "lazy");
                         attachmentImage.attr("title",
-                                "Image: " + attach.getFileName() + Formatter.formatBytes(attach.getSize()));
+                                "Image: " + attachment.getFileName() + Formatter.formatBytes(attachment.getSize()));
 
                         attachmentLink.appendChild(attachmentImage);
                         attachmentsDiv.appendChild(attachmentLink);
-                    } else if (videoFormats.contains(attachmentType)) {
+                    } else if (attachmentType.isPresent() && videoFormats.contains(attachmentType.get())) {
                         Element attachmentVideo = document.createElement("video");
                         attachmentVideo.addClass("chatlog__attachment-media");
-                        attachmentVideo.attr("src", attach.getUrl());
+                        attachmentVideo.attr("src", String.valueOf(attachment.getUrl()));
                         attachmentVideo.attr("alt", "Video attachment");
                         attachmentVideo.attr("controls", true);
                         attachmentVideo.attr("title",
-                                "Video: " + attach.getFileName() + Formatter.formatBytes(attach.getSize()));
+                                "Video: " + attachment.getFileName() + Formatter.formatBytes(attachment.getSize()));
 
                         attachmentsDiv.appendChild(attachmentVideo);
-                    } else if (audioFormats.contains(attachmentType)) {
+                    } else if (attachmentType.isPresent() && audioFormats.contains(attachmentType.get())) {
                         Element attachmentAudio = document.createElement("audio");
                         attachmentAudio.addClass("chatlog__attachment-media");
-                        attachmentAudio.attr("src", attach.getUrl());
+                        attachmentAudio.attr("src", String.valueOf(attachment.getUrl()));
                         attachmentAudio.attr("alt", "Audio attachment");
                         attachmentAudio.attr("controls", true);
                         attachmentAudio.attr("title",
-                                "Audio: " + attach.getFileName() + Formatter.formatBytes(attach.getSize()));
+                                "Audio: " + attachment.getFileName() + Formatter.formatBytes(attachment.getSize()));
 
                         attachmentsDiv.appendChild(attachmentAudio);
                     } else {
@@ -234,8 +232,8 @@ public class DiscordHtmlTranscripts {
                         attachmentGenericName.addClass("chatlog__attachment-generic-name");
 
                         Element attachmentGenericNameLink = document.createElement("a");
-                        attachmentGenericNameLink.attr("href", attach.getUrl());
-                        attachmentGenericNameLink.text(attach.getFileName());
+                        attachmentGenericNameLink.attr("href", String.valueOf(attachment.getUrl()));
+                        attachmentGenericNameLink.text(attachment.getFileName());
 
                         attachmentGenericName.appendChild(attachmentGenericNameLink);
                         attachmentGeneric.appendChild(attachmentGenericName);
@@ -243,7 +241,7 @@ public class DiscordHtmlTranscripts {
                         Element attachmentGenericSize = document.createElement("div");
                         attachmentGenericSize.addClass("chatlog__attachment-generic-size");
 
-                        attachmentGenericSize.text(Formatter.formatBytes(attach.getSize()));
+                        attachmentGenericSize.text(Formatter.formatBytes(attachment.getSize()));
                         attachmentGeneric.appendChild(attachmentGenericSize);
 
                         attachmentsDiv.appendChild(attachmentGeneric);
@@ -256,7 +254,7 @@ public class DiscordHtmlTranscripts {
             content.appendChild(messageContent);
 
             if (!message.getEmbeds().isEmpty()) {
-                for (MessageEmbed embed : message.getEmbeds()) {
+                for(Embed embed : message.getEmbeds()) {
                     if (embed == null) {
                         continue;
                     }
@@ -264,11 +262,11 @@ public class DiscordHtmlTranscripts {
                     embedDiv.addClass("chatlog__embed");
 
                     // embed color
-                    if (embed.getColor() != null) {
+                    if (embed.getColor().isPresent()) {
                         Element embedColorPill = document.createElement("div");
                         embedColorPill.addClass("chatlog__embed-color-pill");
                         embedColorPill.attr("style",
-                                "background-color: #" + Formatter.toHex(embed.getColor()));
+                                "background-color: #" + Formatter.toHex(embed.getColor().get()));
 
                         embedDiv.appendChild(embedColorPill);
                     }
@@ -283,14 +281,14 @@ public class DiscordHtmlTranscripts {
                     embedText.addClass("chatlog__embed-text");
 
                     // embed author
-                    if (embed.getAuthor() != null && embed.getAuthor().getName() != null) {
+                    if (embed.getAuthor().isPresent() && embed.getAuthor().get().getName() != null) {
                         Element embedAuthor = document.createElement("div");
                         embedAuthor.addClass("chatlog__embed-author");
 
-                        if (embed.getAuthor().getIconUrl() != null) {
+                        if (embed.getAuthor().get().getIconUrl().isPresent()) {
                             Element embedAuthorIcon = document.createElement("img");
                             embedAuthorIcon.addClass("chatlog__embed-author-icon");
-                            embedAuthorIcon.attr("src", embed.getAuthor().getIconUrl());
+                            embedAuthorIcon.attr("src", String.valueOf(embed.getAuthor().get().getIconUrl().get()));
                             embedAuthorIcon.attr("alt", "Author icon");
                             embedAuthorIcon.attr("loading", "lazy");
 
@@ -300,15 +298,15 @@ public class DiscordHtmlTranscripts {
                         Element embedAuthorName = document.createElement("span");
                         embedAuthorName.addClass("chatlog__embed-author-name");
 
-                        if (embed.getAuthor().getUrl() != null) {
+                        if (embed.getAuthor().get().getUrl().isPresent()) {
                             Element embedAuthorNameLink = document.createElement("a");
                             embedAuthorNameLink.addClass("chatlog__embed-author-name-link");
-                            embedAuthorNameLink.attr("href", embed.getAuthor().getUrl());
-                            embedAuthorNameLink.text(embed.getAuthor().getName());
+                            embedAuthorNameLink.attr("href", String.valueOf(embed.getAuthor().get().getUrl().get()));
+                            embedAuthorNameLink.text(embed.getAuthor().get().getName());
 
                             embedAuthorName.appendChild(embedAuthorNameLink);
                         } else {
-                            embedAuthorName.text(embed.getAuthor().getName());
+                            embedAuthorName.text(embed.getAuthor().get().getName());
                         }
 
                         embedAuthor.appendChild(embedAuthorName);
@@ -316,25 +314,25 @@ public class DiscordHtmlTranscripts {
                     }
 
                     // embed title
-                    if (embed.getTitle() != null) {
+                    if (embed.getTitle().isPresent()) {
                         Element embedTitle = document.createElement("div");
                         embedTitle.addClass("chatlog__embed-title");
 
-                        if (embed.getUrl() != null) {
+                        if (embed.getUrl().isPresent()) {
                             Element embedTitleLink = document.createElement("a");
                             embedTitleLink.addClass("chatlog__embed-title-link");
-                            embedTitleLink.attr("href", embed.getUrl());
+                            embedTitleLink.attr("href", String.valueOf(embed.getUrl().get()));
 
                             Element embedTitleMarkdown = document.createElement("div");
                             embedTitleMarkdown.addClass("markdown preserve-whitespace")
-                                    .html(Formatter.format(embed.getTitle()));
+                                    .html(Formatter.format(embed.getTitle().get()));
 
                             embedTitleLink.appendChild(embedTitleMarkdown);
                             embedTitle.appendChild(embedTitleLink);
                         } else {
                             Element embedTitleMarkdown = document.createElement("div");
                             embedTitleMarkdown.addClass("markdown preserve-whitespace")
-                                    .html(Formatter.format(embed.getTitle()));
+                                    .html(Formatter.format(embed.getTitle().get()));
 
                             embedTitle.appendChild(embedTitleMarkdown);
                         }
@@ -342,14 +340,14 @@ public class DiscordHtmlTranscripts {
                     }
 
                     // embed description
-                    if (embed.getDescription() != null) {
+                    if (embed.getDescription().isPresent()) {
                         Element embedDescription = document.createElement("div");
                         embedDescription.addClass("chatlog__embed-description");
 
                         Element embedDescriptionMarkdown = document.createElement("div");
                         embedDescriptionMarkdown.addClass("markdown preserve-whitespace");
                         embedDescriptionMarkdown
-                                .html(Formatter.format(embed.getDescription()));
+                                .html(Formatter.format(embed.getDescription().orElse("")));
 
                         embedDescription.appendChild(embedDescriptionMarkdown);
                         embedText.appendChild(embedDescription);
@@ -360,7 +358,7 @@ public class DiscordHtmlTranscripts {
                         Element embedFields = document.createElement("div");
                         embedFields.addClass("chatlog__embed-fields");
 
-                        for (MessageEmbed.Field field : embed.getFields()) {
+                        for(EmbedField field : embed.getFields()) {
                             Element embedField = document.createElement("div");
                             embedField.addClass(field.isInline() ? "chatlog__embed-field-inline"
                                     : "chatlog__embed-field");
@@ -398,17 +396,17 @@ public class DiscordHtmlTranscripts {
                     embedContent.appendChild(embedText);
 
                     // embed thumbnail
-                    if (embed.getThumbnail() != null) {
+                    if (embed.getThumbnail().isPresent()) {
                         Element embedThumbnail = document.createElement("div");
                         embedThumbnail.addClass("chatlog__embed-thumbnail-container");
 
                         Element embedThumbnailLink = document.createElement("a");
                         embedThumbnailLink.addClass("chatlog__embed-thumbnail-link");
-                        embedThumbnailLink.attr("href", embed.getThumbnail().getUrl());
+                        embedThumbnailLink.attr("href", String.valueOf(embed.getThumbnail().get().getUrl()));
 
                         Element embedThumbnailImage = document.createElement("img");
                         embedThumbnailImage.addClass("chatlog__embed-thumbnail");
-                        embedThumbnailImage.attr("src", embed.getThumbnail().getUrl());
+                        embedThumbnailImage.attr("src", String.valueOf(embed.getThumbnail().get().getUrl()));
                         embedThumbnailImage.attr("alt", "Thumbnail");
                         embedThumbnailImage.attr("loading", "lazy");
 
@@ -421,17 +419,17 @@ public class DiscordHtmlTranscripts {
                     embedContentContainer.appendChild(embedContent);
 
                     // embed image
-                    if (embed.getImage() != null) {
+                    if (embed.getImage().isPresent()) {
                         Element embedImage = document.createElement("div");
                         embedImage.addClass("chatlog__embed-image-container");
 
                         Element embedImageLink = document.createElement("a");
                         embedImageLink.addClass("chatlog__embed-image-link");
-                        embedImageLink.attr("href", embed.getImage().getUrl());
+                        embedImageLink.attr("href", String.valueOf(embed.getImage().get().getUrl()));
 
                         Element embedImageImage = document.createElement("img");
                         embedImageImage.addClass("chatlog__embed-image");
-                        embedImageImage.attr("src", embed.getImage().getUrl());
+                        embedImageImage.attr("src", String.valueOf(embed.getImage().get().getUrl()));
                         embedImageImage.attr("alt", "Image");
                         embedImageImage.attr("loading", "lazy");
 
@@ -442,14 +440,14 @@ public class DiscordHtmlTranscripts {
                     }
 
                     // embed footer
-                    if (embed.getFooter() != null) {
+                    if (embed.getFooter().isPresent()) {
                         Element embedFooter = document.createElement("div");
                         embedFooter.addClass("chatlog__embed-footer");
 
-                        if (embed.getFooter().getIconUrl() != null) {
+                        if (embed.getFooter().get().getIconUrl().isPresent()) {
                             Element embedFooterIcon = document.createElement("img");
                             embedFooterIcon.addClass("chatlog__embed-footer-icon");
-                            embedFooterIcon.attr("src", embed.getFooter().getIconUrl());
+                            embedFooterIcon.attr("src", String.valueOf(embed.getFooter().get().getIconUrl().get()));
                             embedFooterIcon.attr("alt", "Footer icon");
                             embedFooterIcon.attr("loading", "lazy");
 
@@ -458,10 +456,11 @@ public class DiscordHtmlTranscripts {
 
                         Element embedFooterText = document.createElement("span");
                         embedFooterText.addClass("chatlog__embed-footer-text");
-                        embedFooterText.text(embed.getTimestamp() != null
-                                ? embed.getFooter().getText() + " • " + embed.getTimestamp()
-                                .format(DateTimeFormatter.ofPattern("HH:mm:ss"))
-                                : embed.getFooter().getText());
+
+                        embedFooterText.text(embed.getTimestamp().isPresent()
+                                ? embed.getFooter().get().getText().orElse("") + " • "
+                                + DateTimeFormatter.ofPattern("HH:mm:ss").withZone(ZoneId.systemDefault()).format(embed.getTimestamp().get())
+                                : embed.getFooter().get().getText().orElse(""));
 
                         embedFooter.appendChild(embedFooterText);
 
@@ -476,14 +475,6 @@ public class DiscordHtmlTranscripts {
             messageGroup.appendChild(content);
             chatLog.appendChild(messageGroup);
         }
-        return new ByteArrayInputStream(document.outerHtml().getBytes());
-    }
-
-    private File findFile(String fileName) {
-        URL url = getClass().getClassLoader().getResource(fileName);
-        if (url == null) {
-            throw new IllegalArgumentException("file is not found: " + fileName);
-        }
-        return new File(url.getFile());
+        return document.outerHtml();
     }
 }
